public class Challenge {

    private String name;
    private double distance;
    private int time;

    public Challenge (String name, double distance, int time) {



    }
}
