import java.util.ArrayList;

public class ChallengesList {
    private ArrayList<Challenge> challengesList;

    public ChallengesList () {

    }

    public static void viewChallenge(){

    }


}
