public class Leaderboard {


    public Leaderboard(){

       // Skal sortere alles løb baseret på tid pr. km/antal løbne km/hvordan vi ellers nu
        // vil gøre det

    }

}
